--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,17 @@
     --premiery-color: #757575;
     --title-color: #212121;
     --accent-color: #2196F3;
-    --heroy-color: #2F303A;
+    --heroy-color: rgba(47, 48, 58, 0.4);
+    --heroy-color:rgba(47, 48, 58, 0.4);
+    --footer-color: #2F303A;
     --body-color: #FFFFFF;
     --comand-color: #F5F4FA;
     --logo-color: #000000;
     --header-color: #ffffff;
     --addrees-color: #ffffff60%;
     --line-color: #ECECEC;
+    --client-color: #AFB1B8;
+    --social-color: rgba(255, 255, 255, 0.1);
 
     /*Fonts*/
     --main-font: 'Roboto', sans-serif  ;
@@ -38,9 +42,8 @@ img {
     padding-bottom: 94px;
 }
 .contener {
-    width: 1200px;
+    width: 1600px;
     padding: 0 15px;
-    margin: 0 auto;
 }
 .list{
 list-style:none;
@@ -71,6 +74,8 @@ a {
 .contener-nav, .contener-nav-portfolio{
 display: flex;
 align-items: center;
+width: 1200px;
+margin:0px auto ;
 }
    .logo-site, .logo-footer, .logo-web {    
         font-family:var(--secondary-font);
@@ -144,20 +149,37 @@ color: var(--accent-color);
     margin-right: 50px;
 }
 .nav-phone{
-    fill: #000;
-    background-color:var(--accent-color) ;
+    fill: var(--premiery-color);
+    background-color:var(--body-color) ;
+    margin-right: 10px;
 }
+
+.nav-phone:hover,
+.nav-phone:focus {
+fill: var(--accent-color);
+}
+
 .small-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-left: auto;
-
 }
-
+.link-nav-box{
+    margin-right: 30px;
+}
 
 /*heroy*/
 
 .heroy {
+ 
     background-color: var(--heroy-color);
-padding: 200px 0;
+    background-image: url(../images/fon.jpg);
+    background-position: center;
+    background-size:cover ;
+    background-repeat:no-repeat ;
+    max-width: 1600px;
+    padding: 200px 0;
 }
 .title-heroy {
         font-weight: 900;
@@ -194,6 +216,10 @@ padding: 200px 0;
 .priorities{
     padding: 94px 0px;
 }
+.contener-priorities{
+    width: 1200px;
+    margin: 0px auto;
+}
 .list-priorities{
     display: flex;
     gap: 30px;
@@ -215,6 +241,7 @@ padding: 200px 0;
     font-size: 14px;
     line-height: calc(16/14);
     text-transform: uppercase;
+    padding-top: 30px;
     }
    
 .title-priorities, .title-comand, .title-work {
@@ -222,11 +249,16 @@ padding: 200px 0;
 }
 .text-priorities{
     line-height: 1.71;
+    
 }
 
 /*work*/
 .work{
-    padding-bottom: 94px;
+    padding-bottom: 94px; 
+}
+.contener-work{
+    width: 1200px;
+    margin: 0px auto;
 }
 .list-work{ 
     display: flex; 
@@ -259,7 +291,10 @@ padding: 200px 0;
     padding-bottom: 94px;
     padding-top: 94px;
 }
-
+.contener-comand{
+    width: 1200px;
+    margin: 0px auto;
+}
 .list-comand{
     display: flex;
 }
@@ -290,6 +325,33 @@ padding: 200px 0;
         font-size: 16px;
         line-height:calc(19/16);
         text-align: center;
+        margin-bottom: 16px;
+}
+.comand-social{
+list-style: none;
+display: flex;
+justify-content: center;
+gap: 10px;
+}
+.link-social{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    background-color:var(--body-color) ;
+    border-radius: 50%;
+}
+.link-social:hover,
+.link-:focus{
+    background-color: var(--accent-color);
+}
+.icon-social{
+    fill: var(--client-color);
+}
+.icon-social:hover,
+.icon-social:focus{
+    fill: var(--body-color);
 }
  /*client*/
 .title-client{
@@ -301,12 +363,46 @@ text-align: center;
 letter-spacing: 0.03em;
 padding-bottom: 94px;
 color: var(--title-color);
+}
+.contener-client{
+    padding: 94px 0px;
+}
+.company{
+display:flex;
+align-items: center;
+justify-content: center;
+list-style: none;
 
 }
+.company-client{
+    margin-right:30px;
+    width: 170px;
+    height: 92px;
+    border: 1px solid var(--client-color);
+    border-radius: 3px;
+}
+.company-client:last-child {
+margin-right: 0px;
+
+}
+.logo-client{
+    fill: var(--client-color);
+   display: block ;
+    margin: 16px 32px;
+   
+}
+
+
 /*footer*/
 .footer {
-    background-color: var(--heroy-color);
+    background-color: var(--footer-color);
     padding: 60px 0px;
+}
+.contener-footer{
+    display: flex;
+    width: 1200px;
+    margin: 0px auto;
+
 }
 .logo-footer {
     color: var(--header-color)
@@ -351,17 +447,29 @@ color: var(--addrees-color);
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: var(--body-color);
-         margin-right: 60px;
-         margin-bottom: 60px;
+        margin-bottom: 20px;
+        padding-top: 12px;
+      
 }
-.footer{
-    display: flex;
+                   
+
+.icon-social-studio{
+    fill: var(--body-color);
+}
+.link-social-studio {
+   display: flex;
     align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    background-color: var(--social-color);
+    border-radius: 50%;
 }
-.contener-footer{
-    width: 231px;
-    margin: 0px;
+.link-social-studio:hover,
+.link-social-studio:focus {
+    background-color: var(--accent-color);
 }
+
 /**
 
 PORTFOLIO
@@ -375,6 +483,11 @@ PORTFOLIO
 }
 .section-gallery{
     padding: 94px 0px;
+}
+.aside-contener{
+    width: 1200px;
+    margin: 0px auto;
+    padding: 0px;
 }
 .list-aside, .list-gallery {
     list-style: none;
@@ -402,6 +515,14 @@ PORTFOLIO
 }
 .item-gallery:nth-last-child(-n + 3){
     margin-bottom: 0px;
+}
+.item-gallery:hover,
+.item-gallery:focus {
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .title-gallery {
         color: var(--title-color);
@@ -434,6 +555,7 @@ PORTFOLIO
 .button:focus{
     color: var(--body-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .text-gallery {
@@ -442,7 +564,6 @@ PORTFOLIO
     line-height:calc(30/16);
     text-align: left;
 }
-
 
 
 
