--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,8 @@ margin:0px auto ;
         line-height:calc(31/26);
     }
         .list-nav, .link-nav, .link-nav-box {
+        display: flex;   
+        align-items: center; 
         font-weight: 500;
         font-size: 14px;
         line-height: calc(16/14);
@@ -145,18 +147,14 @@ color: var(--accent-color);
     display: flex;
     margin-right: auto;
 }
+
 .item-nav:not(:last-child){
     margin-right: 50px;
 }
-.nav-phone{
-    fill: var(--premiery-color);
-    background-color:var(--body-color) ;
-    margin-right: 10px;
-}
 
-.nav-phone:hover,
-.nav-phone:focus {
-fill: var(--accent-color);
+.nav-phone{
+    fill: currentColor;
+    margin-right: 10px;
 }
 
 .small-nav {
@@ -174,12 +172,13 @@ fill: var(--accent-color);
 .heroy {
  
     background-color: var(--heroy-color);
-    background-image: url(../images/fon.jpg);
+    background-image: url(../images/fon.jpg), linear-gradient(to left, var(--heroy-color), var(--heroy-color));
     background-position: center;
     background-size:cover ;
     background-repeat:no-repeat ;
     max-width: 1600px;
     padding: 200px 0;
+    margin: 0 auto;
 }
 .title-heroy {
         font-weight: 900;
@@ -241,15 +240,24 @@ fill: var(--accent-color);
     font-size: 14px;
     line-height: calc(16/14);
     text-transform: uppercase;
-    padding-top: 30px;
+    margin-top: 30px;
     }
    
 .title-priorities, .title-comand, .title-work {
     color: var(--title-color);
 }
 .text-priorities{
-    line-height: 1.71;
-    
+    line-height: 1.71;   
+}
+
+.svg-priorities{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 270px;
+    height: 120px;
+    background-color:var(--comand-color) ;
+    border-radius:4 ;
 }
 
 /*work*/
@@ -339,21 +347,24 @@ gap: 10px;
     justify-content: center;
     width: 44px;
     height: 44px;
-    background-color:var(--body-color) ;
+    color: var(--client-color);
     border-radius: 50%;
 }
 .link-social:hover,
 .link-:focus{
     background-color: var(--accent-color);
+    color: var(--body-color);
 }
 .icon-social{
-    fill: var(--client-color);
+    fill: currentColor;
 }
 .icon-social:hover,
 .icon-social:focus{
     fill: var(--body-color);
 }
+
  /*client*/
+
 .title-client{
 font-family: 'Roboto';
 font-weight: 700;
@@ -361,16 +372,20 @@ font-size: 36px;
 line-height:calc(42/36);
 text-align: center;
 letter-spacing: 0.03em;
-padding-bottom: 94px;
 color: var(--title-color);
+margin-bottom: 50px;
+}
+.client{
+    padding: 94px 0;
 }
 .contener-client{
-    padding: 94px 0px;
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 .company{
 display:flex;
-align-items: center;
-justify-content: center;
+
 list-style: none;
 
 }
@@ -378,18 +393,28 @@ list-style: none;
     margin-right:30px;
     width: 170px;
     height: 92px;
-    border: 1px solid var(--client-color);
-    border-radius: 3px;
+  
 }
 .company-client:last-child {
 margin-right: 0px;
 
 }
 .logo-client{
-    fill: var(--client-color);
-   display: block ;
-    margin: 16px 32px;
-   
+    fill: currentColor;
+}
+.link-client{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--client-color);
+    border: 1px solid var(--client-color);
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+}
+.link-client:hover {
+    color: var(--accent-color);
+    border:1px solid var(--accent-color);
 }
 
 
@@ -400,9 +425,13 @@ margin-right: 0px;
 }
 .contener-footer{
     display: flex;
+    align-items: baseline;
     width: 1200px;
-    margin: 0px auto;
-
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.contact-addrees{
+    margin-right: 70px;
 }
 .logo-footer {
     color: var(--header-color)
@@ -440,16 +469,11 @@ color: var(--addrees-color);
     color: var(--accent-color);
 }
 .footer-cosial{
-    font-family: 'Roboto';
         font-weight: 700;
-        font-size: 14px;
         line-height:calc(16/14);
-        letter-spacing: 0.03em;
         text-transform: uppercase;
         color: var(--body-color);
-        margin-bottom: 20px;
-        padding-top: 12px;
-      
+        margin-bottom: 20px;     
 }
                    
 
@@ -478,7 +502,7 @@ PORTFOLIO
 
 /*header*/
 
-.contener-nav-portfolio {
+.nav {
     border-bottom: 1px solid var(--line-color);
 }
 .section-gallery{
@@ -516,10 +540,11 @@ PORTFOLIO
 .item-gallery:nth-last-child(-n + 3){
     margin-bottom: 0px;
 }
-.item-gallery:hover,
-.item-gallery:focus {
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
+.link-gallery{
+    display: block;
+}
+.link-gallery:hover,
+.link-gallery:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
