--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --heroy-color: rgba(47, 48, 58, 0.4);
     --heroy-color:rgba(47, 48, 58, 0.4);
     --footer-color: #2F303A;
+    --work-color: rgba(47, 48, 58, 0.8);
     --body-color: #FFFFFF;
     --comand-color: #F5F4FA;
     --logo-color: #000000;
@@ -14,10 +15,17 @@
     --line-color: #ECECEC;
     --client-color: #AFB1B8;
     --social-color: rgba(255, 255, 255, 0.1);
+    --anime-color: rgba(33, 150, 243, 0.9);
+    --backdrop-color: rgba(0, 0, 0, 0.2);
+    --close-btn-color: rgba(0, 0, 0, 0.1);
+        
 
     /*Fonts*/
     --main-font: 'Roboto', sans-serif  ;
     --secondary-font: 'Raleway', sans-serif;
+
+    /* transition*/
+        --transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 h1, h2, h3, h4, h5, h6, p, ul {
     margin: 0px; 
@@ -102,24 +110,45 @@ color: var(--accent-color);
 }
 .logo-nav {
     color: var(--logo-color) ;
+    transition: color var(--transition);
 }
 .site-nav {
     color: var(--title-color);
     display: block;
     padding-top:32px ;
     padding-bottom: 32px;
+    transition: color var(--transition);
 }
 .site-nav:hover,
 .site-nav:focus {
     color: var(--accent-color);
+    
 }
 .curent{
     color: var(--accent-color);
+    transition: color var(--transition);
 }
+
 .curent:hover,
 .curent:focus {
     color: var(--title-color);
 }
+.item-nav{
+    position:relative;
+}
+.curent::after{
+    position: absolute;
+    left:0;
+    bottom:0;
+    display: block;
+    content:"";
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 4px;
+}
+
+
 .logo-site, .logo-nav:hover,
 .logo-site, .logo-nav:focus {
     color: var(--accent-color);
@@ -128,6 +157,7 @@ color: var(--accent-color);
 .link-nav {
     color: var(--premiery-color);
     margin-right: 50px;
+    transition: color var(--transition);
     } 
  
  .link-nav:hover,
@@ -137,6 +167,7 @@ color: var(--accent-color);
  }   
 .link-nav-box {
     color: var(--premiery-color);
+    transition: color var(--transition);
 }
 
 .link-nav-box:hover,
@@ -209,6 +240,24 @@ color: var(--accent-color);
     border: none;
     border-radius: 4px;
     padding: 10px 32px;
+}
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(189, 183, 107, 0.4);
+}
+.modal{
+    position: absolute;
+    /* top: 50%; */
+    /* left: 50%; */
+    transform: translate(50%, 50%);
+    width: 528px;
+    height: 581px;
+    background-color: #2F303A;
+    border-radius: 4px;
 }
 
 /*priorities*/
@@ -286,10 +335,27 @@ color: var(--accent-color);
 }
 
 .item-work {
+    position: relative;
     margin-left: 30px;
 }
 .item-work:first-child{
     margin-left: 0px;
+}
+.page-work{
+color:var(--body-color) ;
+
+
+}
+.info-work{
+display: flex;
+align-items: center;
+justify-content:center ;
+    position: absolute;
+        left: 0;
+        bottom: 0;
+    width:100%;
+    height: 70px;
+    background-color:var(--work-color)
 }
 
 /*comand*/
@@ -349,14 +415,16 @@ gap: 10px;
     height: 44px;
     color: var(--client-color);
     border-radius: 50%;
+    transition: color var(--transition);
 }
 .link-social:hover,
-.link-:focus{
+.link-social:focus{
     background-color: var(--accent-color);
     color: var(--body-color);
 }
 .icon-social{
     fill: currentColor;
+    transition: fill var(--transition);
 }
 .icon-social:hover,
 .icon-social:focus{
@@ -411,6 +479,8 @@ margin-right: 0px;
     border-radius: 4px;
     width: 100%;
     height: 100%;
+    transition: color var(--transition), border var(--transition);
+    
 }
 .link-client:hover {
     color: var(--accent-color);
@@ -434,8 +504,10 @@ margin-right: 0px;
     margin-right: 70px;
 }
 .logo-footer {
-    color: var(--header-color)
- }
+    color: var(--header-color);
+   transition: color var(--transition);
+}
+ 
  .logo-footer:hover,
  .logo-footer:focus{
 color: var(--accent-color);
@@ -452,6 +524,7 @@ color: var(--accent-color);
 .link-address {
     color: var(--body-color);
     line-height: 1.71;
+    transition: color var(--transition);
 }
 .item-addrees{
     margin-bottom: 9px;
@@ -462,6 +535,7 @@ color: var(--accent-color);
 .link-address-mail,
 .link-address-tel{
 color: var(--addrees-color);
+transition: color var(--transition);
 
 }
 .link-address-mail:hover,.link-address-tel:hover,.link-address:hover,
@@ -488,10 +562,49 @@ color: var(--addrees-color);
     height: 44px;
     background-color: var(--social-color);
     border-radius: 50%;
+    transition: background-color var(--transition);
 }
 .link-social-studio:hover,
 .link-social-studio:focus {
     background-color: var(--accent-color);
+}
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:var(--backdrop-color);
+}
+.backdrop.is-hidden{
+    opacity: 0.5;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.modal {
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    height: 581px;
+    background-color: var(--body-color);
+    border-radius: 4px;
+}
+.btn-modal{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    border: 1px, solid, var(--close-btn-color) ;
+    border-radius: 50%;
+    background-color:var(--body-color);
+    box-shadow:0px 2px 1px rgba(0, 0, 0, 0.2), 
+     0px 1px 1px rgba(0, 0, 0, 0.14),
+     0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
 
 /**
@@ -542,12 +655,44 @@ PORTFOLIO
 }
 .link-gallery{
     display: block;
+    box-shadow: none;
+    transition: box-shadow var(--transition);
 }
 .link-gallery:hover,
 .link-gallery:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.trans-gallery{
+    position: relative;
+    overflow: hidden;
+
+    
+}
+.anime-gallery{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 63px, 24px;
+    background-color: var(--anime-color);
+    transform:translateY(100%);
+    transition: transform var(--transition) ; 
+}
+.text-anime{
+color: var(--body-color);
+font-style: regular;
+font-size: 24px;
+line-height: calc(28/18);
+letter-spacing: 0.03em;
+}
+.item-gallery:hover .anime-gallery{
+transform: translate(0);
 }
 .title-gallery {
         color: var(--title-color);
@@ -575,6 +720,8 @@ PORTFOLIO
     cursor: pointer;
     padding: 6px 22px;
     border: none;
+    box-shadow: none;
+    transition: background-color var(--transition), box-shadow var(--transition);
 }
 .button:hover,
 .button:focus{
