--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     /* COLOR*/
     --premiery-color: #757575;
     --title-color: #212121;
-    --accent-color: #2196F3;
+    --accent-color: #21c9f3;
     --heroy-color: rgba(47, 48, 58, 0.4);
     --heroy-color:rgba(47, 48, 58, 0.4);
     --footer-color: #2F303A;
@@ -18,6 +18,10 @@
     --anime-color: rgba(33, 150, 243, 0.9);
     --backdrop-color: rgba(0, 0, 0, 0.2);
     --close-btn-color: rgba(0, 0, 0, 0.1);
+    --field-color: rgba(33, 33, 33, 0.2);
+    --placeholder-color:rgba(117, 117, 117, 0.5);
+    --icon-color:#2196F3;
+    --modal-btn-color:#188CE8;
         
 
     /*Fonts*/
@@ -223,8 +227,8 @@ color: var(--accent-color);
         color:var(--header-color) ;
       
 }
- [type="button"]{
-    background-color: var(--accent-color); 
+ .btn{
+    background-color: var(--accent-color);
     color: var(--body-color);
     cursor: pointer;
     font-family: inherit;
@@ -235,7 +239,7 @@ color: var(--accent-color);
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    margin-left: auto ;
+    margin-left: auto;
     margin-right: auto;
     border: none;
     border-radius: 4px;
@@ -289,7 +293,7 @@ color: var(--accent-color);
     width: 270px;
     height: 120px;
     background-color:var(--comand-color) ;
-    border-radius:4 ;
+    border-radius:4px ;
 }
 
 /*work*/
@@ -558,7 +562,9 @@ transition: color var(--transition);
     background-color: var(--backdrop-color);
     transition: opacity var(--transition), visibility var(--transition);
 }
-
+.social-addrees{
+    margin-right: 93px;
+}
 .backdrop.is-hidden{
     opacity: 0.5;
     pointer-events: none;
@@ -574,23 +580,176 @@ transition: color var(--transition);
     height: 581px;
     background-color: var(--body-color);
     border-radius: 4px;
+    padding: 40px;
+}
+.modal-user {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    
+
+}
+.modal-title{
+        display: block;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: calc(23/20);
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--title-color);
+        margin: auto;
+        margin-bottom: 30px;
+      
 }
 .btn-modal{
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 30px;
     height: 30px;
     cursor: pointer;
-    border: 1px, solid, var(--close-btn-color) ;
+    border: 1px solid var(--close-btn-color);
     border-radius: 50%;
     background-color:var(--body-color);
     box-shadow:0px 2px 1px rgba(0, 0, 0, 0.2), 
      0px 1px 1px rgba(0, 0, 0, 0.14),
-     0px 4px 4px rgba(0, 0, 0, 0.25);
-
+     0px 4px 4px rgba(0, 0, 0, 0.25);   
+     transition: fill var(--transition); 
+}
+.btn-modal:focus{
+   fill: var(--accent-color);
+}
+.modal-field{
+    position: relative;
+}
+.modal-input{
+    width: 100%;
+    height: 40px;
+    border: 1px solid var(--field-color);
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 28px;
+    padding-left: 42px;
+    outline: transparent;
+    transition: border-color var(--transition);
+}
+.modal-input:focus {
+    border-color: #2196F3;
+}
+.modal-input:focus ~ .modal-icon{
+    fill: #2196F3;
+}
+.modal-icon{
+    position: absolute;
+    top: 11px;
+    left: 12px;
+    color:var(--title-color) ;
+    transition: fill var(--transition);
+}
+.modal-name{
+    position: absolute;
+    top: -18px;
+    left: 0;
+    font-size: 12px;
+    line-height: calc(14/12);
+    letter-spacing: 0.01em;
+    color:var(--premiery-color);
+}
+.modal-textarea{
+    display: block;
+    resize: none;
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    border: 1px solid var(--field-color);
+    border-radius: 4px;
+    cursor: pointer;
+    outline: transparent;
+    transition: border-color var(--transition);
+    margin-bottom: 20px;
+}
+.modal-textarea::placeholder{
+        font-size: 12px;
+        line-height: calc(14/12);
+        letter-spacing: 0.01em;
+        color: var(--placeholder-color);    
+}
+.modal-textarea:focus{
+    border-color: var(--accent-color);
+}
+.modal-chec{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap: 9px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    vertical-align: middle;
+}
+.icon-blu-square{
+    fill: var(--icon-color);
+    opacity: 0;
+    transition: opacity var(--transition);
 }
 
+.icon-square{
+    opacity: 1;
+    transition: opacity var(--transition);
+}
+
+.modal-box:checked + .check-icon .icon-blu-square{
+    opacity: 1;
+    }
+.modal-box:checked + .check-icon .icon-square{
+    opacity: 0;
+}
+.modal-list{
+    user-select: none;
+}
+.modal-pravila{
+    color: var(--anime-color);
+    text-decoration: underline;
+}
+.modal-btn{
+    background-color: var(--modal-btn-color);
+}
+
+
+.subscription-inter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.subscription-input{
+    width:358px ;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow:4px 0px 4px rgba(0, 0, 0, 0.15);
+    margin-right: 12px;    
+}
+.subscription-input:focus{
+    color: var(--body-color);
+}
+
+.subscription-btn{
+    width: 200px;
+    height: 50px;
+    color: var(--body-color);
+    background-color: var(--accent-color);
+    border: none;
+   
+   
+
+
+}
+.subscription-avia{
+    fill: var(--body-color);
+    padding-left: 10px;
+}
 /**
 
 PORTFOLIO
@@ -650,9 +809,11 @@ PORTFOLIO
 }
 .trans-gallery{
     position: relative;
-    overflow: hidden;
-
-    
+    overflow: hidden;  
+}
+.link-gallery:hover .anime-gallery,
+.link-gallery:focus.anime-gallery {
+    transform: translate(0);
 }
 .anime-gallery{
     display: flex;
@@ -670,7 +831,6 @@ PORTFOLIO
 }
 .text-anime{
 color: var(--body-color);
-font-style: regular;
 font-size: 18px;
 line-height: calc(28/18);
 letter-spacing: 0.03em;
@@ -720,6 +880,7 @@ transform: translate(0);
     line-height:calc(30/16);
     text-align: left;
 }
+
 
 
 
