--- a/sass/component/_product.scss
+++ b/sass/component/_product.scss
@@ -1,4 +1,7 @@
 /*product*/
+@media screen and (min-width:1199px) {
+
+
 .product{
     padding-bottom: 94px; 
 }
@@ -35,4 +38,5 @@
     font-weight: 700;
     line-height: calc(16/14);
     text-transform: uppercase;
+}
 }
