--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import"./base/settings";
 @import"./utils/mixin";
 @import"./component/navigation";
+@import"./utils/menu-mobal";
 @import"./component/logo";
 @import"./component/heroy";
 @import"./utils/button";
@@ -11,7 +12,7 @@
 @import"./component/comand";
 @import"./component/compani";
 @import"./component/footer";
-@import"./utils/backdrop";
 @import"./utils/modal";
+@import"./utils/backdrop";
 @import"./portfolio/gallery";
 @import"./portfolio/buttoms";
