--- a/sass/base/_settings.scss
+++ b/sass/base/_settings.scss
@@ -1,4 +1,3 @@
-
 h1, h2, h3, h4, h5, h6, p, ul {
     margin: 0px; 
     padding: 0px;
@@ -18,15 +17,28 @@ img {
     border-radius: 4px;
 }
 .section{
-    width: 1600px; 
-    padding-top: 94px;
-    padding-bottom: 94px;
+    max-width: 1600px; 
+    height: 100%;
+    padding-top: 118px;
+    padding-bottom: 118px;
+   
+    @media screen and(min-width: 1200px) {
+        padding-top: 200px;
+        padding-bottom:200px ;
+    }
 }
 
 .contener{
-    width: 1200px;
+
+    max-width: 480px;
     margin: 0px auto;
     padding: 0 15px;
+    @media screen and ( min-width:768px ) {
+        max-width: 768px
+    }
+    @media screen and(min-width: 1200px) {
+        max-width: 1200px;
+    }
   }
 .list{
 list-style:none;
