--- a/sass/component/_benefits.scss
+++ b/sass/component/_benefits.scss
@@ -1,10 +1,13 @@
+benefits
 .benefits{
     padding-top:94px;
     padding-bottom: 94px;
 }
 .benefits__list{
     display: flex;
+    flex-direction:column ;
     gap: 30px;
+    
 }
 
  .benefits__title{
@@ -12,7 +15,11 @@
     font-size: 14px;
     line-height: calc(16/14);
     text-transform: uppercase;
+    margin-bottom:10px;
     margin-top: 30px;
+    @media screen and (max-width:768px) {
+        text-align: center;
+    }
     }
    
 .benefits__title, .comand__title,
@@ -25,8 +32,12 @@
 
 .benefits__svg{
     @include CenterFlex;
-    width: 270px;
+    width: 100%;
     height: 120px;
     background-color:$comand-color ;
     @include border-radius ;
+    @media screen and (max-width:768px) {
+        max-width:480px;
+        padding: 0 15px;
+    }
 }
